fix(bug-747): persistent build issues and horizontal overflow on mobile headerFlyouts

--- a/src/components/global/header/headerFlyout.scss
+++ b/src/components/global/header/headerFlyout.scss
@@ -93,7 +93,6 @@
 
   .menu__content {
     top: var(--kd-header-height);
-    transform: translateX(100%);
   }
 }
 
